<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/resposta_rotuloID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pessoa_ID"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resposta_rotuloIDPessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pessoa_nome"
        android:textColor="@color/light_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/resposta_rotuloID"
        app:layout_constraintTop_toBottomOf="@id/resposta_rotuloID"/>
    <!--
        app:layout_constraintStart_toStartOf="@+id/jogador_rotuloID"
        app:layout_constraintTop_toBottomOf="@+id/jogador_rotuloID" />
-->
    <TextView
        android:id="@+id/pessoa_rotuloIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/pessoa_idade"
        app:layout_constraintStart_toStartOf="@+id/resposta_rotuloIDPessoa"
        app:layout_constraintTop_toBottomOf="@+id/resposta_rotuloIDPessoa" />

</androidx.constraintlayout.widget.ConstraintLayout>