<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ActivityInicio">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500sp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutInicio"
                android:layout_width="1200dp"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/botaoQuestionario"
                    android:layout_width="600dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/inicio_questionario"
                    android:textSize="30dp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/botaoCadastro"
                    android:layout_width="600dp"
                    android:layout_height="100dp"
                    android:text="@string/inicio_cadastro"
                    android:textSize="30dp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/botaoQuestionario" />

                <Button
                    android:id="@+id/botaoRespostasSalvas"
                    android:layout_width="600dp"
                    android:layout_height="100dp"
                    android:text="@string/inicio_salvos"
                    android:textSize="30dp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/botaoCadastro" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_versao"
                    android:textSize="30dp"
                    app:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="@+id/botaoRespostasSalvas"
                    app:layout_constraintStart_toStartOf="@+id/botaoRespostasSalvas"
                    app:layout_constraintTop_toBottomOf="@+id/botaoRespostasSalvas" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/app_name"
                    android:textSize="30dp"
                    app:fontFamily="sans-serif-light"
                    app:layout_constraintBottom_toTopOf="@+id/botaoQuestionario"
                    app:layout_constraintEnd_toEndOf="@+id/botaoQuestionario"
                    app:layout_constraintStart_toStartOf="@+id/botaoQuestionario"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
