<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Vertical -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="160dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="800dp"
                    android:layout_height="700dp">

                    <TextView
                        android:id="@+id/cadastro_tv_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cadastro_nome"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="@+id/cadastro_tv_rotuloID"
                        app:layout_constraintTop_toBottomOf="@+id/cadastro_tv_rotuloID" />

                    <EditText
                        android:id="@+id/cadastro_et_nome"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="textNoSuggestions"
                        android:maxLength="100"
                        android:textSize="30sp"
                        android:textColor="@color/light_name"
                        app:layout_constraintStart_toStartOf="@+id/cadastro_tv_nome"
                        app:layout_constraintTop_toBottomOf="@+id/cadastro_tv_nome" />

                    <TextView
                        android:id="@+id/cadastro_tv_idade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/cadastro_idade"
                        android:textSize="30sp"
                        app:layout_constraintStart_toEndOf="@+id/cadastro_et_nome"
                        app:layout_constraintTop_toTopOf="@+id/cadastro_tv_nome" />

                    <Spinner
                        android:id="@+id/spinnerIdade"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:spinnerMode="dialog"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="@+id/cadastro_tv_idade"
                        app:layout_constraintTop_toTopOf="@+id/cadastro_et_nome" />


                    <TextView
                        android:id="@+id/cadastro_tv_rotuloID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/cadastro_tvID"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cadastro_ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/cadastro_id_inicial"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/cadastro_tv_rotuloID"
                        app:layout_constraintTop_toTopOf="@+id/cadastro_tv_rotuloID" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>